refactor: View에서 원시 데이터 가공 진행